<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MeasureThrowActivity">

    <TextView
        android:id="@+id/latTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="16dp"
        android:text="Latitude:"
        app:layout_constraintStart_toEndOf="@+id/endBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="Longitude:"
        app:layout_constraintStart_toEndOf="@+id/endBtn"
        app:layout_constraintTop_toBottomOf="@+id/latTextView" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#A6A4A4"
        android:text="Start"
        app:layout_constraintBottom_toTopOf="@+id/calcDistance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/endBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        android:background="#AFAFAF"
        android:text="End"
        app:layout_constraintStart_toEndOf="@+id/startBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/calcDistance"
        android:layout_width="184dp"
        android:layout_height="44dp"
        android:layout_marginTop="76dp"
        android:background="#AFAFAF"
        android:text="Calculate Distance"
        app:layout_constraintBottom_toTopOf="@+id/mMapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.036" />

    <TextView
        android:id="@+id/distTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:text="Distance:"
        app:layout_constraintBottom_toTopOf="@+id/mMapView"
        app:layout_constraintStart_toEndOf="@+id/calcDistance"
        app:layout_constraintTop_toBottomOf="@+id/lonTextView"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mMapView"
        android:layout_width="0dp"
        android:layout_height="294dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/clearBtn"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="#AFAFAF"
        android:text="Clear Map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mMapView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/saveThrowBtn"
        android:layout_width="109dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:background="#AFAFAF"
        android:text="Save Throw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.372"
        app:layout_constraintStart_toEndOf="@+id/clearBtn"
        app:layout_constraintTop_toBottomOf="@+id/mMapView"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>